--- a/template.css
+++ b/template.css
@@ -461,7 +461,7 @@ li {
   transition: transform 1s;
 }
 h1 {
-  color: red;
+  color: black;
   font-size: 2.8em;
 }
 
@@ -479,7 +479,7 @@ li {
   transition: transform 1s;
 }
 h1 {
-  color: green;
+  color: black;
   font-size: 2em;
 }
 
