--- a/template.css
+++ b/template.css
@@ -8,7 +8,7 @@ body {
 
 @font-face {
     font-family: 'DK Lemon Yellow Sun';
-    src: url('DK Lemon Yellow Sun');
+    src: url(DK Lemon Yellow Sun.otf);
 }
 
 
