--- a/template.css
+++ b/template.css
@@ -3,7 +3,7 @@ body {
   background-size: cover;
   height: 110%;
   margin: 25px auto;
-  font-family: 'Patrick Hand';
+font-family: 'Patrick Hand', cursive;
 }
 
 
@@ -27,7 +27,7 @@ header {
 
 a {
   text-decoration: none;
-  font-family: 'Patrick hand';
+font-family: 'Patrick Hand', cursive;
   color: black;
   font-weight: bold;
 }
@@ -77,7 +77,8 @@ a {
 
 li {
   color:rgba(0,0,0,0.5);
-  font-family: 'DK-Lemon-Yellow-Sun';
+
+font-family: 'Patrick Hand', cursive;
   font-size: 2em;
   font-weight: bold;
   padding: 10px 1px;
