--- a/template.css
+++ b/template.css
@@ -230,7 +230,7 @@ h2{
   text-transform: uppercase;
   font-size: 3em;
   padding-top: 2%;
-  font-family: 'DK Lemon Yellow Sun';
+font-family: 'Patrick Hand', cursive;
   font-weight: bold;
 }
 
@@ -245,8 +245,8 @@ p{
 }
 
 h3 {
-  font-family: 'DK Lemon Yellow Sun';
-  color: black;
+font-family: 'Patrick Hand', cursive;
+  color: green;
   font-size: 1.8em;
   font-weight: bold;
   line-height: 0.6;
