--- a/template.css
+++ b/template.css
@@ -168,7 +168,7 @@ h1{
   text-align: center;
   margin-top: -37% ;
   text-transform: uppercase;
-  font-family: 'brain flower';
+font-family: 'Patrick Hand', cursive;
   font-size: 4em;
   font-weight: 600
 
@@ -300,8 +300,8 @@ form {
 }
 
 input[type="text"]{
-  font-family: 'DK Lemon Yellow Sun';
-    font-size: 0.7em;
+font-family: 'Patrick Hand', cursive;
+ font-size: 0.7em;
     width: 242px;
     color: gray;
     padding: 10px;
@@ -314,7 +314,7 @@ input[type="text"]{
 }
 
 textarea[type="text"] {
-  font-family: 'DK Lemon Yellow Sun';
+font-family: 'Patrick Hand', cursive;
   font-size: 0.7em;
   width: 242px;
   color: gray;
@@ -337,7 +337,7 @@ textarea[type="text"]:focus{
 }
 
 input[type="submit"]  {
-  font-family: 'DK Lemon Yellow Sun';
+font-family: 'Patrick Hand', cursive;
     text-transform: uppercase;
     font-size: 1em;
     width: 260px;
