--- a/template.css
+++ b/template.css
@@ -246,7 +246,7 @@ p{
 
 h3 {
 font-family: 'Patrick Hand', cursive;
-  color: green;
+  color: black;
   font-size: 1.8em;
   font-weight: bold;
   line-height: 0.6;
